--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,24 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss';
+
+@config '../tailwind.config.js';
+
+/*
+  The default border color has changed to `currentcolor` in Tailwind CSS v4,
+  so we've added these compatibility styles to make sure everything still
+  looks the same as it did with Tailwind CSS v3.
+
+  If we ever want to remove these styles, we need to add an explicit border
+  color utility to any element that depends on these defaults.
+*/
+@layer base {
+  *,
+  ::after,
+  ::before,
+  ::backdrop,
+  ::file-selector-button {
+    border-color: var(--color-gray-200, currentcolor);
+  }
+}
 
 @layer base {
 	:root {
@@ -74,10 +92,12 @@
 	}
 }
 
-@font-face {
-	font-family: 'Geist';
-	font-weight: 100 900;
-	src: url(/fonts/GeistMono-Variable.woff2) format('woff2');
+@layer utilities {
+  @font-face {
+    font-family: 'Geist';
+    font-weight: 100 900;
+    src: url(/fonts/GeistMono-Variable.woff2) format('woff2');
+  }
 }
 
 @layer base {
